bug 433284 - Needed to reposition child views after sliding container frame during print-selection.  r+sr=roc